# Hillel_School_CPP_PRO

./: .gitignore  CMakeLists.txt  README.md
lesson_1/: lesson_1-план.md
lesson_1/project/: CMakeLists.txt  main.cpp
lesson_11/unit_11_CPP-QML/: CMakeLists.txt  Main.qml  appbackend.cpp  appbackend.h  credentials.json  main.cpp
lesson_11/unit_11_ColorDelegate_QWidget/: CMakeLists.txt  colordelegate.cpp  colordelegate.h  main.cpp
lesson_11/unit_11_Model-View-QML/: CMakeLists.txt  main.cpp  main.qml
lesson_11/unit_11_Model-View-QWidget/: CMakeLists.txt  main.cpp  personmodel.cpp  personmodel.h
lesson_12/ComboBox/: CMakeLists.txt  Main.qml  main.cpp
lesson_12/ParallelAnimation/: CMakeLists.txt  Main.qml
lesson_12/PropertyAnimation/: CMakeLists.txt  Main.qml  main.cpp
lesson_12/QWidget-Animation/: CMakeLists.txt  main.cpp
lesson_12/QWidget_Delegate/: CMakeLists.txt  colordelegate.cpp  colordelegate.h  main.cpp  progressbardelegate.cpp  progressbardelegate.h
lesson_12/QWidget_QParallelAnimationGroup/: CMakeLists.txt  main.cpp
lesson_12/QWidget_QSequentialAnimationGroup/: CMakeLists.txt  main.cpp
lesson_12/QWidget_StateMachine/: CMakeLists.txt  main.cpp
lesson_12/QWidget_StateMachine-2/: CMakeLists.txt  main.cpp
lesson_12/SequentialAnimation/: CMakeLists.txt  Main.qml  main.cpp
lesson_12/TransitionAnimation/: CMakeLists.txt  Main.qml  main.cpp
lesson_13/QHttpServer/: CMakeLists.txt  main.cpp
lesson_13/QNetworkAccessManager/: CMakeLists.txt  main.cpp
lesson_13/QNetworkAccessManager_POST(JSON)/: CMakeLists.txt  main.cpp
lesson_13/QTcpServer/: CMakeLists.txt  main.cpp
lesson_13/QTcpSocket/: CMakeLists.txt  main.cpp
lesson_14/Boost-Asio-TCP_client/: CMakeLists.txt  main.cpp
lesson_14/Boost-Asio-TCP_server/: CMakeLists.txt  main.cpp
lesson_14/Boost-Beast-httpClient/: CMakeLists.txt  main.cpp
lesson_14/Boost-Beast-httpClient-vcpkg/: .gitignore  CMakeLists.txt  main.cpp
lesson_14/boost-program_options/: CMakeLists.txt  main.cpp
lesson_2/: CMakeLists.txt
lesson_2/filesystem_library/: CMakeLists.txt  copy_directory.cpp  copy_file_use_filesystem.cpp  copy_file_use_iostream.cpp  create_dir_filesystem.cpp  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  permissions.cpp  permissions_1.cpp  print_files_dirs.cpp  remove_dir_filesystem.cpp  remove_file_filesystem.cpp
lesson_3/: CMakeLists.txt  README.md  nullptr.cpp  shared_ptr.cpp  unique_ptr.cpp  weak_ptr.cpp
lesson_3/Containers_library/: CMakeLists.txt  array.cpp  vector.cpp
lesson_4/: CMakeLists.txt  atomic.cpp  condition_variable.cpp  deadlock.cpp  race_condition.cpp  scoped_lock.cpp  shared_mutex.cpp  sleep_for.cpp  sleep_until.cpp  thread.cpp  thread_value.cpp
lesson_5/: CMakeLists.txt  async-exemple-2.cpp  async-exemple-3.cpp  async.cpp  call_once-exemple-2.cpp  call_once.cpp  lambda.cpp  lambda_trable.cpp  packaged_task-exception.cpp  packaged_task.cpp  promise.cpp  shared_future.cpp
lesson_8/: .gitignore  CMakeLists.txt
lesson_8/Layout_QGridLayout/: CMakeLists.txt  main.cpp
lesson_8/Layout_setContentsMargins/: CMakeLists.txt  main.cpp
lesson_8/Layout_simple/: CMakeLists.txt  main.cpp
lesson_8/QCheckBox/: CMakeLists.txt  main.cpp
lesson_8/QColorDialog/: CMakeLists.txt  main.cpp
lesson_8/QComboBox/: CMakeLists.txt  main.cpp
lesson_8/QDateTimeEdit/: CMakeLists.txt  main.cpp
lesson_8/QDial/: CMakeLists.txt  main.cpp
lesson_8/QLineEdit/: CMakeLists.txt  main.cpp
lesson_8/QListWidget/: CMakeLists.txt  main.cpp
lesson_8/QPlainTextEdit/: CMakeLists.txt  main.cpp
lesson_8/QProgressBar/: CMakeLists.txt  main.cpp
lesson_8/QPushButton/: CMakeLists.txt  main.cpp
lesson_8/QRadioButton/: CMakeLists.txt  main.cpp
lesson_8/QSpinBox/: CMakeLists.txt  main.cpp
lesson_8/QTableView/: CMakeLists.txt  main.cpp
lesson_8/QTableWidget_simple/: CMakeLists.txt  main.cpp
lesson_8/QTreeWidget/: CMakeLists.txt  main.cpp
lesson_8/QWidget_signal_slot/: CMakeLists.txt  main.cpp
lesson_8/RoundButton/: CMakeLists.txt  main.cpp
lesson_8/Simple_example/: CMakeLists.txt
